--- a/assets/galerie/anniversairesenfants/anniversairesenfants.html
+++ b/assets/galerie/anniversairesenfants/anniversairesenfants.html
@@ -96,10 +96,10 @@
       <!-- گالری (اختیاری) -->
       <h2><!-- [H2_GALLERY] Par ex. Quelques réalisations --></h2>
       <div class="gallery">
-        <img src="anniversairesenfants/ge2.jpg" alt="<!-- [ALT_1] -->" loading="lazy">
-        <img src="assets/galerie/anniversairesenfants/ge2.png" alt="<!-- [ALT_2] -->" loading="lazy">
-        <img src="assets/galerie/anniversairesenfants/ge3.png" alt="<!-- [ALT_3] -->" loading="lazy">
-        <img src="assets/galerie/anniversairesenfants/ge4.png" alt="<!-- [ALT_3] -->" loading="lazy">
+        <img src="ge1.jpg" alt="">
+        <img src="ge2.jpg" alt="">
+        <img src="ge3.png" alt="">
+        <img src="ge4.png" alt="">
       </div>
 
       <!-- دکمه برگشت به بالا -->
