--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -201,5 +201,30 @@
       </footer>
     </main>
   </div>
+
+<!-- ساخت گالری با لینک‌ها -->
+<script>
+document.querySelectorAll('.gallery img').forEach(img => {
+  img.addEventListener('click', () => {
+    // ایجاد لایت‌باکس
+    const lightbox = document.createElement('div');
+    lightbox.classList.add('lightbox');
+    lightbox.innerHTML = `
+      <a href="#" class="lightbox-close">&times;</a>
+      <img src="${img.src}" alt="${img.alt}">
+    `;
+    document.body.appendChild(lightbox);
+    lightbox.style.display = 'flex';
+
+    // بستن با کلیک
+    lightbox.addEventListener('click', e => {
+      if (e.target === lightbox || e.target.classList.contains('lightbox-close')) {
+        lightbox.remove();
+      }
+    });
+  });
+});
+</script>
+  
 </body>
 </html>
