--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -124,6 +124,38 @@
       border:1px dashed #ead9c8; border-radius:14px; padding:12px 14px;
       max-width:760px; margin:10px auto;
     }
+
+    .lightbox {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .lightbox img {
+    max-width: 90%;
+    max-height: 80%;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.4);
+  }
+
+  .lightbox:target {
+    display: flex;
+  }
+
+  .lightbox-close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    font-size: 40px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+  }
   </style>
 </head>
 
