--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -15,7 +15,7 @@
   <nav class="nav-buttons">
 
   <a href="../../../index.html" class="btn">⟵ Retour</a>
-  <a href="#galerie" class="btn">Galerie</a>
+  <a href="../../../index.html##galerie" class="btn">Galerie</a>
   <a href="../../Contact.html" class="btn">Contact</a>
     </nav>
   </header>
