--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -14,9 +14,9 @@
     
   <nav class="nav-buttons">
 
-  <a href="../../../index.html" class="btn">⟵ Retour</a>
-  <a href="../../../index.html##galerie" class="btn">Galerie</a>
-  <a href="../../Contact.html" class="btn">Contact</a>
+  <a class="btn" href="../../../index.html">Accueil</a>
+        <a class="btn" href="../../../index.html#galerie">Galerie</a>
+        <a class="btn" href="../../contact.html">Contact</a>
     </nav>
   </header>
 
