--- a/assets/galerie/bento/bento.html
+++ b/assets/galerie/bento/bento.html
@@ -39,9 +39,9 @@
 
       <!-- ناوبری -->
       <nav class="nav-buttons" aria-label="Navigation principale">
-        <a class="btn" href="index.html">Accueil</a>
-        <a class="btn" href="index.html#galerie">Galerie</a>
-        <a class="btn" href="contact.html">Contact</a>
+        <a class="btn" href="../../../index.html">Accueil</a>
+        <a class="btn" href="../../../index.html#galerie">Galerie</a>
+        <a class="btn" href="../../contact.html">Contact</a>
       </nav>
     </header>
 
