--- a/assets/galerie/cupcakes/cupcakes.html
+++ b/assets/galerie/cupcakes/cupcakes.html
@@ -31,9 +31,14 @@
 <body>
   <div class="wrap">
     <header>
-      <img src="images/logo.jpg" alt="Logo Les Pâtisseries de Lida" class="logo">
+      <img src="../../../assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida" class="logo">
       <h1>Les Pâtisseries de Lida</h1>
-      <div class="badge">Cupcakes</div>
+      <nav class="nav-buttons">
+
+  <a class="btn" href="../../../index.html">Accueil</a>
+        <a class="btn" href="../../../index.html#galerie">Galerie</a>
+        <a class="btn" href="../../contact.html">Contact</a>
+      </nav>
     </header>
 
     <main class="card" role="main">
