--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -168,8 +168,8 @@
 
       <nav class="nav-buttons" aria-label="Navigation principale">
         <a class="btn" href="../../../index.html">Accueil</a>
-        <a class="btn" href="../index.html#galerie">Galerie</a>
-        <a class="btn" href="contact.html">Contact</a>
+        <a class="btn" href="../../../index.html#galerie">Galerie</a>
+        <a class="btn" href="../../contact.html">Contact</a>
       </nav>
     </header>
 
@@ -206,11 +206,11 @@
             <img src="../../../assets/galerie/numbercakes/nc.png" alt="Number cake" loading="lazy">
           </div>
 
-          <div class="cta" style="margin-top:12px">
+        <!--  <div class="cta" style="margin-top:12px">
             <span class="badge" style="background:#fff;color:var(--navy);border:1px solid var(--border)">Chantilly Mascarpone</span>
             <span class="badge" style="background:#fff;color:var(--navy);border:1px solid var(--border)">Buttercream</span>
             <span class="badge" style="background:#fff;color:var(--navy);border:1px solid var(--border)">Fruits Rouges</span>
-          </div>
+          </div> -->
         </div>
       </section>
 
