--- a/assets/contact.html
+++ b/assets/contact.html
@@ -61,7 +61,7 @@
         <h2>Formulaire de commande</h2>
         <p>Remplissez le formulaire ci-dessous pour recevoir un devis personnalisé 📩</p>
 
-        <form action="https://formspree.io/f/xxxxxxxx" method="POST" enctype="multipart/form-data" class="order-form">
+        <form action="https://formspree.io/f/xzzjlnje" method="POST" enctype="multipart/form-data" class="order-form">
           <label>Nom complet :</label>
           <input type="text" name="nom" required>
 
