--- a/assets/contact.html
+++ b/assets/contact.html
@@ -62,8 +62,8 @@
         <p>Remplissez le formulaire ci-dessous pour recevoir un devis personnalisé 📩</p>
 
         <form action="https://formspree.io/f/xzzjlnje" method="POST" enctype="multipart/form-data" class="order-form">
-          <label>Nom complet :</label>
-          <input type="text" name="nom" required>
+          <p><label>Nom complet :</label>
+          <input type="text" name="nom" required></p>
 
           <label>Email :</label>
           <input type="email" name="email" required>
