--- a/assets/contact.html
+++ b/assets/contact.html
@@ -64,14 +64,18 @@
           <p><label>Nom complet :</label>
           <input type="text" name="nom" required></p>
 
-          <label>Email :</label>
-          <input type="email" name="email" required>
+        <p>    <label>Email :</label>
+          <input type="email" name="email" required> </p>
 
-          <label>Téléphone :</label>
+          <p>
+            <label>Téléphone :</label>
           <input type="tel" name="telephone" placeholder="07 84 64 40 14" required>
+          </p>
 
-          <label>Date de l’événement :</label>
+          <p>
+            <label>Date de l’événement :</label>
           <input type="date" name="date" required>
+          </p>
 
           <label>Nombre de parts :</label>
           <input type="number" name="parts" min="1" placeholder="ex. 20" required>
