--- a/assets/contact.html
+++ b/assets/contact.html
@@ -96,8 +96,8 @@
 
           <p>
           <label>Décoration spéciale ou message :</label>
-          <textarea name="message" rows="4" placeholder="Écrivez vos précisions ici..."></textarea>
-          </p>
+          <p><textarea name="message" rows="4" placeholder="Écrivez vos précisions ici..."></textarea>
+          </p></p>
 
           <p>
           <label>Photos d’inspiration (vous pouvez en sélectionner plusieurs) :</label>
