--- a/assets/contact.html
+++ b/assets/contact.html
@@ -105,7 +105,7 @@
           </p>
 
           <p>
-            <button type="submit" class="btn">Envoyer la commande</button>
+            <button type="submit" class="btn" align="center">Envoyer la commande</button>
           </p>
         </form>
       </section>
