--- a/assets/contact.html
+++ b/assets/contact.html
@@ -181,6 +181,78 @@ form.order-form button {
   font-size: 20px;
   cursor: pointer;
 }
+    /* ==== STYLE FORMULAIRE DE COMMANDE ==== */
+
+form.order-form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  max-width: 600px;
+  margin: 0 auto 30px;
+}
+
+form.order-form label {
+  font-weight: 600;
+  color: var(--navy);
+}
+
+form.order-form input,
+form.order-form textarea {
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  padding: 10px 12px;
+  font-size: 16px;
+  font-family: inherit;
+  background: #fff;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+form.order-form textarea {
+  min-height: 140px;
+  resize: vertical;
+}
+
+form.order-form input:focus,
+form.order-form textarea:focus {
+  outline: none;
+  border-color: var(--accent);
+  box-shadow: 0 0 0 3px rgba(202,162,77,.25);
+}
+
+form.order-form button {
+  display: block;
+  margin: 20px auto 0;
+  padding: 12px 32px;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 999px;
+}
+
+/* ==== STYLE RESPONSIVE (MOBILE) ==== */
+@media (max-width: 700px) {
+  form.order-form {
+    max-width: 90%;
+    padding: 0 5px;
+  }
+  form.order-form label {
+    font-size: 15px;
+  }
+  form.order-form input,
+  form.order-form textarea {
+    font-size: 15px;
+    padding: 10px;
+  }
+  form.order-form textarea {
+    min-height: 160px;
+  }
+  form.order-form button {
+    width: 100%;
+    font-size: 18px;
+    padding: 14px;
+    margin-top: 25px;
+  }
+}
     
   </style>
 </body>
