--- a/assets/contact.html
+++ b/assets/contact.html
@@ -11,103 +11,83 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&family=Great+Vibes&display=swap" rel="stylesheet">
   
-  <!-- Styles -->
+  <!-- Style principal -->
   <link rel="stylesheet" href="../style.css">
 
-  <!-- Font Awesome برای آیکون‌ها -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-7x6Ij+RZC1SzMxzMf1uwGqTr8pX0H0czBpDNqJ3VljHrdC1w7xPGCe5bHeQGIt+IQSzUtZVzYy2nhZ3N1Wlvug==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
   <div class="wrap">
-    <!-- Header -->
     <header class="hero">
       <img class="logo" src="../assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
       <div class="brand">Les Pâtisseries de Lida</div>
+      <div class="badge">Contact & Commande</div>
 
       <nav class="nav-buttons">
         <a class="btn" href="../index.html">Accueil</a>
         <a class="btn" href="../index.html#galerie">Galerie</a>
-
+        <a class="btn" href="#">Contact</a>
       </nav>
     </header>
 
-    <!-- Main -->
     <main class="card" role="main">
-      <p class="lead">Pour toute commande personnalisée, contactez-nous via WhatsApp, Instagram, Facebook ou le formulaire ci-dessous 💬</p>
+      <p class="lead">
+        Pour toute commande personnalisée, contactez-nous via WhatsApp, Instagram, Facebook ou le formulaire ci-dessous 💬
+      </p>
 
-      <!-- Liens directs -->
       <section class="cta social-links">
-        <a class="btn social whatsapp" href="https://wa.me/33784644014" target="_blank" rel="noopener">
+        <a class="btn social whatsapp" href="https://wa.me/33784644014" target="_blank">
           <i class="fab fa-whatsapp"></i> WhatsApp
         </a>
-
         <a class="btn social phone" href="tel:+33784644014">
           <i class="fas fa-phone"></i> Appeler
         </a>
-
-        <a class="btn social instagram" href="https://www.instagram.com/lespatisseriesdelida59?igsh=ZnF6dW04dnVpZHI2" target="_blank" rel="noopener">
+        <a class="btn social instagram" href="https://www.instagram.com/lespatisseriesdelida59?igsh=ZnF6dW04dnVpZHI2" target="_blank">
           <i class="fab fa-instagram"></i> Instagram
         </a>
-
-        <a class="btn social facebook" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank" rel="noopener">
+        <a class="btn social facebook" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank">
           <i class="fab fa-facebook"></i> Facebook
         </a>
       </section>
 
-      <!-- Formulaire -->
       <section>
         <h2>Formulaire de commande</h2>
         <p>Remplissez le formulaire ci-dessous pour recevoir un devis personnalisé 📩</p>
 
-        <form action="https://formspree.io/f/xzzjlnje" method="POST" enctype="multipart/form-data" class="order-form">
-          <p>
-            <label>Nom complet :</label>
+        <form id="contactForm" action="https://formspree.io/f/xxxxxxxx" method="POST" enctype="multipart/form-data" class="order-form">
+          <label>Nom complet :</label>
           <input type="text" name="nom" required>
-          </p>
 
-        <p>    <label>Email :</label>
-          <input type="email" name="email" required> </p>
+          <label>Email :</label>
+          <input type="email" name="email" required>
 
-          <p>
-            <label>Téléphone :</label>
+          <label>Téléphone :</label>
           <input type="tel" name="telephone" placeholder="07 84 64 40 14" required>
-          </p>
 
-          <p>
-            <label>Date de l’événement :</label>
+          <label>Date de l’événement :</label>
           <input type="date" name="date" required>
-          </p>
 
-          <p>
-            <label>Nombre de parts :</label>
+          <label>Nombre de parts :</label>
           <input type="number" name="parts" min="1" placeholder="ex. 20" required>
-          </p>
 
-          <p>
-            <label>Thème / Modèle souhaité :</label>
+          <label>Thème / Modèle souhaité :</label>
           <input type="text" name="theme" placeholder="ex. princesse, baby shower, chic, floral..." required>
-          </p>
 
-          <p>
           <label>Saveur / parfum :</label>
           <input type="text" name="saveur" placeholder="ex. vanille, chocolat, fraise...">
-          </p>
 
-          <p>
           <label>Décoration spéciale ou message :</label>
-          <p><textarea name="message" rows="4" placeholder="Écrivez vos précisions ici..."></textarea>
-          </p></p>
+          <textarea name="message" rows="6" placeholder="Écrivez vos précisions ici..."></textarea>
 
-          <p>
           <label>Photos d’inspiration (vous pouvez en sélectionner plusieurs) :</label>
           <input type="file" name="images" multiple accept="image/*">
-          </p>
 
-          <p>
-            <button type="submit" class="btn" align="center">Envoyer la commande</button>
-          </p>
+          <button type="submit" class="btn">Envoyer la commande</button>
         </form>
+
+        <p id="formMessage" class="confirmation-message" style="display:none;"></p>
       </section>
 
       <footer>
@@ -116,7 +96,7 @@
     </main>
   </div>
 
-  <!-- Style مخصوص آیکون‌های رنگی -->
+  <!-- Styles spécifiques -->
   <style>
     .social-links .btn {
       display:flex;
@@ -126,9 +106,7 @@
       justify-content:center;
       min-width:180px;
     }
-    .btn i {
-      font-size:22px;
-    }
+    .btn i { font-size:22px; }
     .btn.social.whatsapp i { color:#25D366; }
     .btn.social.instagram i { 
       background: radial-gradient(circle at 30% 110%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
@@ -138,122 +116,49 @@
     .btn.social.facebook i { color:#1877F2; }
     .btn.social.phone i { color:#1a2238; }
 
-form.order-form {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  max-width: 600px;
-  margin: 0 auto 30px;
-}
-
-form.order-form label {
-  font-weight: 600;
-  color: var(--navy);
-}
-
-form.order-form input,
-form.order-form textarea {
-  border: 1px solid var(--border);
-  border-radius: 8px;
-  padding: 10px 12px;
-  font-size: 16px;
-  font-family: inherit;
-  background: #fff;
-}
-
-form.order-form textarea {
-  min-height: 140px;
-  resize: vertical;
-}
-
-form.order-form input:focus,
-form.order-form textarea:focus {
-  outline: none;
-  border-color: var(--accent);
-  box-shadow: 0 0 0 3px rgba(202,162,77,.25);
-}
-
-form.order-form button {
-  display: block;
-  margin: 20px auto 0;  /* وسط */
-  /* یا برای راست: margin: 20px 0 0 auto; */
-  padding: 12px 28px;
-  font-size: 20px;
-  cursor: pointer;
-}
-    /* ==== STYLE FORMULAIRE DE COMMANDE ==== */
-
-form.order-form {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  max-width: 600px;
-  margin: 0 auto 30px;
-}
-
-form.order-form label {
-  font-weight: 600;
-  color: var(--navy);
-}
-
-form.order-form input,
-form.order-form textarea {
-  border: 1px solid var(--border);
-  border-radius: 8px;
-  padding: 10px 12px;
-  font-size: 16px;
-  font-family: inherit;
-  background: #fff;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-form.order-form textarea {
-  min-height: 140px;
-  resize: vertical;
-}
-
-form.order-form input:focus,
-form.order-form textarea:focus {
-  outline: none;
-  border-color: var(--accent);
-  box-shadow: 0 0 0 3px rgba(202,162,77,.25);
-}
-
-form.order-form button {
-  display: block;
-  margin: 20px auto 0;
-  padding: 12px 32px;
-  font-size: 20px;
-  cursor: pointer;
-  border-radius: 999px;
-}
-
-/* ==== STYLE RESPONSIVE (MOBILE) ==== */
-@media (max-width: 700px) {
-  form.order-form {
-    max-width: 90%;
-    padding: 0 5px;
-  }
-  form.order-form label {
-    font-size: 15px;
-  }
-  form.order-form input,
-  form.order-form textarea {
-    font-size: 15px;
-    padding: 10px;
-  }
-  form.order-form textarea {
-    min-height: 160px;
-  }
-  form.order-form button {
-    width: 100%;
-    font-size: 18px;
-    padding: 14px;
-    margin-top: 25px;
-  }
-}
-    
+    .confirmation-message {
+      text-align: center;
+      font-size: 18px;
+      color: var(--navy);
+      background: #fff7e0;
+      border: 1px solid rgba(202,162,77,.3);
+      border-radius: 12px;
+      padding: 14px;
+      margin-top: 20px;
+      box-shadow: 0 3px 6px rgba(0,0,0,.08);
+      animation: fadeIn .6s ease;
+    }
+    @keyframes fadeIn {
+      from { opacity:0; transform:translateY(5px); }
+      to { opacity:1; transform:translateY(0); }
+    }
   </style>
+
+  <!-- JS pour message de confirmation -->
+  <script>
+  document.getElementById('contactForm').addEventListener('submit', async function(e) {
+    e.preventDefault();
+    const form = e.target;
+    const formMessage = document.getElementById('formMessage');
+
+    const data = new FormData(form);
+    const response = await fetch(form.action, {
+      method: form.method,
+      body: data,
+      headers: { 'Accept': 'application/json' }
+    });
+
+    if (response.ok) {
+      form.reset();
+      formMessage.innerHTML = "💕 Merci ! Votre demande a bien été envoyée.<br>Dans le plus court délai possible, nous prendrons contact avec vous.";
+      formMessage.style.display = 'block';
+    } else {
+      formMessage.innerHTML = "❌ Une erreur est survenue. Merci de réessayer.";
+      formMessage.style.display = 'block';
+      formMessage.style.background = '#ffe3e3';
+      formMessage.style.color = '#a33';
+    }
+  });
+  </script>
 </body>
 </html>
