--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <section id="contact" class="section alt contact">
         <h2>Contact</h2>
         <p>📍 Annœullin, France</p>
-        <p>📧 <a href="mailto:contact@lespatisseriesdelida.fr">contact@lespatisseriesdelida.fr</a></p>
+        <p>📧 <a href="mailto:lida2025@lespatisseriesdelida.fr">contact@lespatisseriesdelida.fr</a></p>
         <p>Pour une commande sur mesure : thème, date & nombre de parts.</p>
       </section>
 
