--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
       <!-- Contact -->
       <section id="contact" class="section alt contact">
-        <h2>Contact</h2>
+        <h2><a href="assets/contact.html" class="btn">Contact</a></h2>
         <p>📍 Annœullin, France</p>
-        <p>📧 <a href="mailto:lida2025@lespatisseriesdelida.fr">contact@lespatisseriesdelida.fr</a></p>
+        <p>📧 <a href="mailto:lida2025@lespatisseriesdelida.fr">lida2025@lespatisseriesdelida.fr</a></p>
         <p>Pour une commande sur mesure : thème, date & nombre de parts.</p>
       </section>
 
