--- a/index.html
+++ b/index.html
@@ -134,12 +134,89 @@
         </div>
       </section>
 
-      <!-- Contact -->
-      <section id="contact" class="section alt contact">
-        <h2><a href="assets/contact.html" class="btn">Contact</a></h2>
-        <p>📍 Annœullin, France</p>
-        <p>📧 <a href="mailto:lida2025@lespatisseriesdelida.fr">lida2025@lespatisseriesdelida.fr</a></p>
-        <p>Pour une commande sur mesure : thème, date & nombre de parts.</p>
+      <section id="adresse" class="section alt">
+  <h2>Où nous trouver</h2>
+
+  <p>
+    📍
+    <a href="https://www.google.com/maps?q=Les+Pâtisseries+de+Lida,+Annœullin,+France"
+       target="_blank"
+       rel="noopener"
+       style="color: var(--navy); font-weight: 600;">
+      59480 Annœullin, France
+    </a>
+  </p>
+
+  <p>📞 
+    <a href="tel:+33784644014">07&nbsp;84&nbsp;64&nbsp;40&nbsp;14</a>
+  </p>
+
+  <p>📧 
+    <a href="mailto:lida2025@lespatisseriesdelida.fr">
+      lida2025@lespatisseriesdelida.fr
+    </a>
+  </p>
+
+  <p>
+    Nous réalisons vos créations sur mesure selon vos envies, votre thème et le nombre de parts.  
+    <br>💬 En moins de 24h, nous vous contacterons.
+  </p>
+
+  <div class="cta">
+    <a class="btn" href="https://wa.me/33784644014" target="_blank" rel="noopener">WhatsApp</a>
+    <a class="btn" href="https://www.instagram.com/lespatisseriesdelida59" target="_blank" rel="noopener">Instagram</a>
+    <a class="btn" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank" rel="noopener">Facebook</a>
+  </div>
+      </section>
+
+      <section id="adresse" class="section alt">
+  <h2>Où nous trouver</h2>
+
+  <p>
+    📍
+    <a href="https://www.google.com/maps?q=Les+Pâtisseries+de+Lida,+Annœullin,+France"
+       target="_blank"
+       rel="noopener"
+       style="color: var(--navy); font-weight: 600;">
+      59480 Annœullin, France
+    </a>
+  </p>
+
+  <p>📞 
+    <a href="tel:+33784644014">07&nbsp;84&nbsp;64&nbsp;40&nbsp;14</a>
+  </p>
+
+  <p>📧 
+    <a href="mailto:lida2025@lespatisseriesdelida.fr">
+      lida2025@lespatisseriesdelida.fr
+    </a>
+  </p>
+
+  <p>
+    Nous réalisons vos créations sur mesure selon vos envies, votre thème et le nombre de parts.  
+    <br>💬 En moins de 24h, nous vous contacterons.
+  </p>
+
+  <div class="cta social-links">
+    <a class="btn" href="https://wa.me/33784644014" target="_blank" rel="noopener">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" 
+           alt="WhatsApp" width="22" height="22" 
+           style="vertical-align:middle; margin-right:6px; filter:invert(12%) sepia(36%) saturate(600%) hue-rotate(60deg);">
+      WhatsApp
+    </a>
+    <a class="btn" href="https://www.instagram.com/lespatisseriesdelida59" target="_blank" rel="noopener">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" 
+           alt="Instagram" width="22" height="22" 
+           style="vertical-align:middle; margin-right:6px; filter:invert(15%) sepia(36%) saturate(800%) hue-rotate(300deg);">
+      Instagram
+    </a>
+    <a class="btn" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank" rel="noopener">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" 
+           alt="Facebook" width="22" height="22" 
+           style="vertical-align:middle; margin-right:6px; filter:invert(15%) sepia(30%) saturate(800%) hue-rotate(200deg);">
+      Facebook
+    </a>
+  </div>
       </section>
 
       <!-- Footer داخل کارت -->
