--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
           </a>
         </div>
       </section>
+      
+<section id="adresse" class="section alt">
+  <h2>Où nous trouver</h2>
 
   <p>
     📍
