Adding exact icon

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <br>💬 En moins de 24h, nous vous contacterons.
   </p>
 
-  <div class="cta social-links">
+  <!-- <div class="cta social-links">
     <a class="btn" href="https://wa.me/33784644014" target="_blank" rel="noopener">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" 
            alt="WhatsApp" width="22" height="22" 
@@ -181,7 +181,24 @@
            style="vertical-align:middle; margin-right:6px; filter:invert(15%) sepia(30%) saturate(800%) hue-rotate(200deg);">
       Facebook
     </a>
-  </div>
+  </div> -->
+
+<section class="cta social-links">
+        <a class="btn social whatsapp" href="https://wa.me/33784644014" target="_blank">
+          <i class="fab fa-whatsapp"></i> WhatsApp
+        </a>
+        <a class="btn social phone" href="tel:+33784644014">
+          <i class="fas fa-phone"></i> Appeler
+        </a>
+        <a class="btn social instagram" href="https://www.instagram.com/lespatisseriesdelida59?igsh=ZnF6dW04dnVpZHI2" target="_blank">
+          <i class="fab fa-instagram"></i> Instagram
+        </a>
+        <a class="btn social facebook" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank">
+          <i class="fab fa-facebook"></i> Facebook
+        </a>
+      </section>
+
+  
       </section>
 
       <!-- Footer داخل کارت -->
