--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <br>💬 En moins de 24h, nous vous contacterons.
   </p>
 
-<section class="cta social-links">
+<div class="cta social-links">
         <a class="btn social whatsapp" href="https://wa.me/33784644014" target="_blank">
           <i class="fab fa-whatsapp"></i> WhatsApp
         </a>
@@ -178,9 +178,12 @@
         <a class="btn social facebook" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank">
           <i class="fab fa-facebook"></i> Facebook
         </a>
-      </section>
-
   
+          <i class="fab fa-facebook" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank" ></i>
+          
+        </a>
+</div>
+
       </section>
 
       <!-- Footer داخل کارت -->
@@ -216,6 +219,7 @@
       });
     });
   </script>
+  
 
   <style>
     .social-links .btn {
