--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
           </a>
         </div>
       </section>
-      
 <section id="adresse" class="section alt">
   <h2>Où nous trouver</h2>
 
@@ -165,26 +164,32 @@
     <br>💬 En moins de 24h, nous vous contacterons.
   </p>
 
-<div class="cta social-links">
-        <a class="btn social whatsapp" href="https://wa.me/33784644014" target="_blank">
-          <i class="fab fa-whatsapp"></i> WhatsApp
-        </a>
-        <a class="btn social phone" href="tel:+33784644014">
-          <i class="fas fa-phone"></i> Appeler
-        </a>
-        <a class="btn social instagram" href="https://www.instagram.com/lespatisseriesdelida59?igsh=ZnF6dW04dnVpZHI2" target="_blank">
-          <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a class="btn social facebook" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank">
-          <i class="fab fa-facebook"></i> Facebook
-        </a>
-  
-          <i class="fab fa-facebook" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank" ></i>
-          
-        </a>
-</div>
+  <!-- دکمه‌های بزرگ -->
+  <div class="cta social-links">
+    <a class="btn social whatsapp" href="https://wa.me/33784644014" target="_blank">
+      <i class="fab fa-whatsapp"></i> WhatsApp
+    </a>
+    <a class="btn social phone" href="tel:+33784644014">
+      <i class="fas fa-phone"></i> Appeler
+    </a>
+    <a class="btn social instagram" href="https://www.instagram.com/lespatisseriesdelida59?igsh=ZnF6dW04dnVpZHI2" target="_blank">
+      <i class="fab fa-instagram"></i> Instagram
+    </a>
+    <a class="btn social facebook" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank">
+      <i class="fab fa-facebook-f"></i> Facebook
+    </a>
+  </div>
 
-      </section>
+  <!-- آیکون‌های کوچک فقط لوگو -->
+  <div class="social-mini" style="margin-top:14px;">
+    <a href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank" rel="noopener" class="fb">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://www.instagram.com/lespatisseriesdelida59" target="_blank" rel="noopener" class="ig">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+</section>
 
       <!-- Footer داخل کارت -->
       <footer>
