--- a/index.html
+++ b/index.html
@@ -149,10 +149,18 @@
     </a>
   </p>
 
-  <p>📞 
-    <a href="tel:+33784644014">07&nbsp;84&nbsp;64&nbsp;40&nbsp;14</a>
+  <p>🩷💚 Besoin d’un gâteau dans les 24 heures ?
+Appelez notre équipe au <a href="tel:+33784644014">📞 07&nbsp;84&nbsp;64&nbsp;40&nbsp;14</a> pour connaître nos disponibilités.💚🩷
+<h>
+</h>   
   </p>
 
+<nav class="nav-buttons" aria-label="Navigation principale">
+        
+        <a href="assets/contact.html" class="btn">Commander !</a>
+        
+</nav>
+  
   <p>📧 
     <a href="mailto:lida2025@lespatisseriesdelida.fr">
       lida2025@lespatisseriesdelida.fr
@@ -163,32 +171,22 @@
     Nous réalisons vos créations sur mesure selon vos envies, votre thème et le nombre de parts.  
     <br>💬 En moins de 24h, nous vous contacterons.
   </p>
+<div class="social-mini">
+  <a href="https://www.facebook.com/share/1BNDDuTGgG/" 
+     class="facebook" target="_blank" rel="noopener" aria-label="Facebook">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+  
+  <a href="https://www.instagram.com/lespatisseriesdelida59" 
+     class="instagram" target="_blank" rel="noopener" aria-label="Instagram">
+    <i class="fab fa-instagram"></i>
+  </a>
 
-  <!-- دکمه‌های بزرگ -->
-  <div class="cta social-links">
-    <a class="btn social whatsapp" href="https://wa.me/33784644014" target="_blank">
-      <i class="fab fa-whatsapp"></i> WhatsApp
-    </a>
-    <a class="btn social phone" href="tel:+33784644014">
-      <i class="fas fa-phone"></i> Appeler
-    </a>
-    <a class="btn social instagram" href="https://www.instagram.com/lespatisseriesdelida59?igsh=ZnF6dW04dnVpZHI2" target="_blank">
-      <i class="fab fa-instagram"></i> Instagram
-    </a>
-    <a class="btn social facebook" href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank">
-      <i class="fab fa-facebook-f"></i> Facebook
-    </a>
-  </div>
-
-  <!-- آیکون‌های کوچک فقط لوگو -->
-  <div class="social-mini" style="margin-top:14px;">
-    <a href="https://www.facebook.com/share/1BNDDuTGgG/" target="_blank" rel="noopener" class="fb">
-      <i class="fab fa-facebook-f"></i>
-    </a>
-    <a href="https://www.instagram.com/lespatisseriesdelida59" target="_blank" rel="noopener" class="ig">
-      <i class="fab fa-instagram"></i>
-    </a>
-  </div>
+  <a href="https://wa.me/33784644014" 
+     class="whatsapp" target="_blank" rel="noopener" aria-label="WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+</div>
 </section>
 
       <!-- Footer داخل کارت -->
