--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
     </a>
   </p>
 
-  <p>🩷💚 Besoin d’un gâteau dans les 24 heures ?
-Appelez notre équipe au <a href="tel:+33784644014">📞 07&nbsp;84&nbsp;64&nbsp;40&nbsp;14</a> pour connaître nos disponibilités.💚🩷
-<h>
-</h>   
+  <h> Besoin d’un gâteau dans les 24 heures ?</h>
+  <p>
+💚🩷 Appelez moi au <a href="tel:+33784644014">📞 07&nbsp;84&nbsp;64&nbsp;40&nbsp;14</a> pour connaître les disponibilités.🩷💚
   </p>
-
+</h>   
+  
 <nav class="nav-buttons" aria-label="Navigation principale">
         
         <a href="assets/contact.html" class="btn">Commander !</a>
